<resources>
    <string name="app_name">chatX</string>
    <string name="userAddBtnDescription">Used to add user</string>
    <string name="ChatBoxHint">Type a Message</string>
    <string name="send_button_description">Send button</string>
    <string name="app_logo_description">app logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="welcome">Welcome!</string>
    <string name="name">Name</string>
    <string name="retype_password">Retype Password</string>
</resources>